fix display on mobile & computer restart move

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body::after {
 }
 
 .header {
-    padding: 5rem 0 2rem 0;
+    padding: 2rem 0 2rem 0;
     margin: auto 0 auto 0;
 }
 
@@ -154,8 +154,8 @@ button:disabled {
 
 .content {
     margin-bottom: 2rem;
-    width: clamp(360px, 40vw, 480px);
-    height: clamp(360px, 40vw, 480px);
+    width: clamp(330px, 40vw, 480px);
+    height: clamp(330px, 40vw, 480px);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
@@ -177,14 +177,25 @@ button:disabled {
 }
 
 @media only screen and (max-width:900px) {
+    body::after {
+        height: 50px;
+    }
+    .header {
+        padding-bottom: 1.5rem;
+        margin: 1rem 0 .5rem 0;
+    }
     .game-interface {
         display: grid;
         grid-template-rows: 1fr auto;
         grid-template-columns: 1fr 1fr;
         gap: 2rem;
     }
+    .content {
+        margin-top: -30px;
+        margin-bottom: 10px;
+    }
     .player-container {
-        width: 50%;
+        width: 85%;
     }
     .player-container.first {
         grid-area: 1 / 1 / 2 / 2;
@@ -198,6 +209,17 @@ button:disabled {
     .content {
         grid-area: 2 / 1 / 3 / 3;
         justify-self: center;
+    }
+    button {
+        width: 10rem;
+        font-size: 0.8rem;
+        height: 2rem;
+    }
+    .mode-buttons {
+        padding-top: .8rem;
+    }
+    .player-container .result {
+        font-size: 3rem;
     }
 }
 
